# ImGM

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.orig  README.md  commitlint.config.js  package-lock.json  package.json  premake5.lua
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
docs/: README.md  _sidebar.md  architecture.md  building.md  concept-architecture.md  concept-coverage.md  concept-tooling.md  dll.md  examples.md  gamemaker.md  guides-wrappers.md  index.html  installation.md  style.css  tooling.md
docs/coverage/: ImGui.md
src/dll/: .gitignore  CMakeLists.txt  ImGM.vcxproj  ImGM.vcxproj.filters  ImGMDll.vcxproj.filters  config.h  dll.sln  imgm.cpp  imgm.h  imgui_gm.h  main.cpp
src/dll/imgui/: imgui_impl_gm.cpp
src/dll/imgui/wrappers/: imgui_api_gm.cpp  imgui_color_gm.cpp  imgui_combo_gm.cpp  imgui_docking_gm.cpp  imgui_drag_gm.cpp  imgui_drawlist_gm.cpp  imgui_ext_memeditor_gm.cpp  imgui_fonts_gm.cpp  imgui_gm_fontconfig.h  imgui_gm_selectionstorage.h  imgui_gm_windowclass.h  imgui_input_gm.cpp  imgui_input_widgets_gm.cpp  imgui_layout_gm.cpp  imgui_listbox_gm.cpp  imgui_menu_gm.cpp  imgui_payload_gm.cpp  imgui_plots_gm.cpp  imgui_popup_gm.cpp  imgui_selectable_gm.cpp  imgui_slider_gm.cpp  imgui_style_gm.cpp  imgui_table_gm.cpp  imgui_tabs_gm.cpp  imgui_text_gm.cpp  imgui_tooltips_gm.cpp  imgui_tree_gm.cpp  imgui_widgets_gm.cpp  imgui_window_gm.cpp
src/dll/internal/: YYRValue.h  YYRunnerInterface.h  YYStd.h  gm.h
src/gm/ImGM/: .gitignore  ImGM.yyp
src/gm/ImGM/extensions/ImGM/: ImGM.exp  ImGM.yy  imgui_gm.exp
src/gm/ImGM/fonts/fntConsolas/: fntConsolas.yy
src/gm/ImGM/fonts/fnt_consolas/: fnt_consolas.yy
src/gm/ImGM/objects/objControl/: Create_0.gml  Draw_64.gml  Draw_73.gml  Step_0.gml  Step_1.gml  objControl.yy
src/gm/ImGM/objects/objExample/: Create_0.gml  Step_0.gml  objExample.yy
src/gm/ImGM/objects/objTests/: Create_0.gml  Other_4.gml  Step_0.gml  objTests.yy
src/gm/ImGM/objects/obj_control/: Create_0.gml  Draw_73.gml  Other_2.gml  Other_3.gml  Other_5.gml  Step_0.gml  Step_1.gml  obj_control.yy
src/gm/ImGM/objects/obj_example/: Create_0.gml  Step_0.gml  obj_example.yy
src/gm/ImGM/objects/obj_ktf_stepper/: Step_0.gml  obj_ktf_stepper.yy
src/gm/ImGM/objects/obj_tests/: CleanUp_0.gml  Create_0.gml  KeyPress_49.gml  Other_4.gml  Step_0.gml  obj_tests.yy
src/gm/ImGM/options/main/: options_main.yy
src/gm/ImGM/options/windows/: options_windows.yy
src/gm/ImGM/rooms/rmEmpty/: rmEmpty.yy
src/gm/ImGM/rooms/rmMain/: rmMain.yy
src/gm/ImGM/rooms/rmTests/: rmTests.yy
src/gm/ImGM/rooms/rm_empty/: rm_empty.yy
src/gm/ImGM/rooms/rm_main/: rm_main.yy
src/gm/ImGM/rooms/rm_tests/: rm_tests.yy
src/gm/ImGM/scripts/ImExtNodeEditor/: ImExtNodeEditor.gml  ImExtNodeEditor.yy
src/gm/ImGM/scripts/ImGM_Conf/: ImGM_Conf.gml  ImGM_Conf.yy
src/gm/ImGM/scripts/ImGui/: ImGui.gml  ImGui.yy
src/gm/ImGM/scripts/ImGui_Extras/: ImGui_Extras.gml  ImGui_Extras.yy
src/gm/ImGM/scripts/ImGui_Misc/: ImGui_Misc.gml  ImGui_Misc.yy
src/gm/ImGM/scripts/KTF/: KTF.gml  KTF.yy
src/gm/ImGM/scripts/__ImGM/: __ImGM.gml  __ImGM.yy
src/gm/ImGM/scripts/update_base_position/: update_base_position.gml  update_base_position.yy
src/gm/ImGM/shaders/shdImGui/: shdImGui.yy
src/gm/ImGM/sprites/sprExample/: sprExample.yy
src/gm/ImGM/sprites/sprExample2/: sprExample2.yy
src/gm/ImGM/sprites/spr_example/: spr_example.yy
src/gm/ImGM/sprites/spr_example2/: spr_example2.yy
src/tools/: defaults.js
src/tools/lib/: modules.js  program.js
src/tools/lib/class/: base-functions.js  base-logger.js  file.js  name.js
src/tools/lib/parsers/: base.js  wrappers.js
src/tools/lib/parsers/langs/: cpp.js
src/tools/lib/utils/: string.js
src/tools/scripts/: modules-copy.js
src/tools/scripts/wrappers-gen/: file-worker.js  gml-writer.js  gml.js  index.js
